# isomer-labs

./: .env.example  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  NOTICE  README.md  ROADMAP.md  isomer-team-repo.toml  mkdocs.yml  pyproject.toml  skills-lock.json
.codex/skills/: isomer-dev-migrate-deepsci-skill
.github/workflows/: workflow.yml
.imsight-arts/project-mgr/: release-notes-v0.5.0.md
.isomer-labs/: manifest.toml
.isomer-labs/research-topics/: default.toml  flash-attention-4-whitebox-runtime-model.toml  flash-attention-gb10-peak-performance-optimization.toml  flashmla-gb10-hardware-aware-performance-model.toml  predictive-memory-tiering-survey.toml  predmem-survey.toml  pwinfer-analysis.toml
.kimi-code/skills/: isomer-misc-nvidia-tools
comparisons/: README.md
context/: index.md  topic-chatlogs
context/design/: project-goal.md  research-execution-extension-examples.md  rough-architecture.md
context/drafts/: README.md  anydraft.md
context/explore/: README.md  deepscientist-system-explain.md
context/migrations/: 20260717-flash-attention-4-research-idea-portfolio-repair.md
context/plans/: research-paradigm-skill-gaps.md
context/summaries/: about-kimi-code-session-logs.md
docs/: assumptions-and-roadmap.md  concepts.md  contributing-docs.md  getting-started.md  houmao-adapter.md  index.md  isomer-cli.md  runtime-and-files.md  storage-layer.md  system-design.md  team-repositories.md  topic-workspace-definition.md  troubleshooting.md  workflows.md
docs/developer/: architecture.md  assumptions-and-roadmap.md  contributing-docs.md  index.md  packaged-system-skills.md  release-process.md  storage-layer.md  system-skill-migration.md  team-repositories.md  testing.md  ui-contracts.md
docs/manual/: cli-reference.md  concepts.md  houmao-adapter.md  index.md  literature-observations.md  operation-set-acceptance.md  project-lifecycle.md  project-web.md  research-idea-portfolio.md  research-records.md  research-topics.md  topic-workspace-git.md  topic-workspaces.md  troubleshooting.md  workspace-runtime.md
docs/tutorial/: author-research-intent.md  develop-a-white-box-model.md  first-project.md  first-research-topic.md  index.md  prepare-topic-environment.md  project-web-gui.md  quickstart.md  run-a-human-steered-research-pass.md  system-skills.md  validate-with-real-evidence.md  write-and-inspect-a-paper.md
dswork/: .gitignore  README.md
execplan/: README.md  manifest.toml
execplan/agents/: README.md  bindings.toml  bo-reviewer.toml  skill-bindings.toml
execplan/docs/: README.md  binding-gates.md  claude-effort.md  publication-quality.md  research-contract.md  start-runbook.md
execplan/harness/: README.md  commands.toml
execplan/ops/: loop-watchdog.sh  reconcile-skills.py
execplan/packs/: ADAPTER-CONTRACT.md  README.md
execplan/skills/: README.md
intention/: loop-overview.md
isomer-content/: .gitignore  README.md
isomer-history/: README.md
predmem-survey/: state.sqlite
runs/: prepared-workspace.md
scripts/: claude-kimi.sh  migrate_flash_topic_summary_contract.py  validate_docs.py  validate_houmao_cli_adapter.py  validate_research_paradigm_skillset.py  validate_skillsets.py
shared/: README.md
skillset/: README.md  callgraph.md  manifest.toml  misc  operator  research  research-paradigm  service
skillset/operator/: README.md
skillset/research-paradigm/: PROVENANCE.md  README.md  deepscientist-migration-guide.md  validation.toml
skillset/service/: README.md
skillset/skill-creator/: README.md  SKILL.md
src/isomer_labs/: __init__.py  __main__.py  builtins.py  cli.py  content_layout.py  context.py  diagnostics.py  doctor.py  houmao_cli_adapter.py  houmao_manifests.py  init_project.py  local_tmp_surfaces.py  manifest.py  models.py  paths.py  profile_bundle_validation.py  profile_bundles.py  project.py  (+24 more)
(+5096 files in other folders)
